tests/ui/hygiene/rustc_res/enum_variants_cannot_have_visibilities.rs
//@ build: fail
//@ stderr
//@ mutest-flags: -Z no-sanitize-macro-expns

mod inner {
    pub enum Variants {
        pub PubVariant,
        pub(crate) CrateVariant,
        pub(super) InnerVariant,
        pub(self) SelfVariant,
        pub(in crate::inner) InInnerVariant,
    }
}
